--- a/Task_list/AppUser/pages/components/styles/RegisterField.css
+++ b/Task_list/AppUser/pages/components/styles/RegisterField.css
@@ -1,4 +1,4 @@
-.login-Box {
+.Register-Box {
     width: 300px; /* Largura do campo de login */
     padding: 16px; /* Espaçamento interno */
     border: 1px solid #ccc; /* Borda cinza */
@@ -11,11 +11,16 @@
     align-items: center; /* Centraliza os itens dentro do campo */
 }
 
-.login-Box div{
+.Register-Box div{ /* OB: os componentes do material sao basicamente divs*/
     margin-top: 5px;
 }
-
-.login-Box button{
+.Register-Box button{
     margin-top: 20px !important;
+    margin-bottom: 20px !important;
+}
+
+.buttonRegister{
+    margin-top: 20px !important;
+    margin-right: 20px !important;
     margin-bottom: 20px !important;
 }
